<resources>
    <string name="app_name">Care4Pets</string>
    <string name="add_health_record">Add Health Record</string>
    <string name="record_title">Record Title</string>
    <string name="save">Save</string>
    <string name="last_visit_dummy">Last visit: Aug 2024</string>
    <string name="record_type_dummy">Vaccination</string>
    <string name="health_records_activity_title">Health Records</string>
    <string name="add_health_record_btn">Add Health Record</string>
    <string name="care_instructions_activity_title">Care Instructions</string>
    <string name="care_instructions_dummy_1">• Feed twice daily</string>
    <string name="care_instructions_dummy_2">• Walk for 30 minutes</string>
    <string name="description">Description</string>
    <string name="back">Back</string>
    <string name="reminder_icon">Reminder Icon</string>
    <string name="repeat_reminder">Repeat Reminder</string>
    <string name="notification_settings">Notification Settings</string>
</resources>