<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="#F7FDFB">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@android:drawable/ic_menu_revert" />

    <TextView
        android:id="@+id/tvTitleCareInstructions"
        android:text="@string/care_instructions_activity_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#1F2B3A"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_below="@id/tvTitleCareInstructions"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_card_gradient"
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/care_instructions_dummy_1"
            android:textSize="16sp"
            android:textColor="#1F2B3A"
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/care_instructions_dummy_2"
            android:textSize="16sp"
            android:textColor="#1F2B3A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</RelativeLayout>
